13098
Seems to confuse both the typechecker and the code generator.
```scala
scala> val x = null
x: Null = null

scala> val y : String = x
y: String = null

scala> class Foo extends Null
defined class Foo

scala> val x : Null = new Foo
java.lang.IncompatibleClassChangeError: Implementing class
        at java.lang.ClassLoader.defineClass1(Native Method)
        at java.lang.ClassLoader.defineClass(ClassLoader.java:620)
        at java.security.SecureClassLoader.defineClass(SecureClassLoader.java:124)
        at java.net.URLClassLoader.defineClass(URLClassLoader.java:260)
        at java.net.URLClassLoader.access$$100(URLClassLoader.java:56)
        at java.n...
scala> val y : String = new Foo
<console>:5: error: type mismatch;
 found   : Foo
 required: String
       val y : String = new Foo
                        ^

scala> val y : String = (new Foo).asInstanceOf[Null]
Exception in thread "main" java.lang.AssertionError: assertion failed: type error: can't convert from REFERENCE(line4$$object$$$$iw$$$$iw$$Foo) to REFERENCE(java.lang.String) in unit <console>
        at scala.Predef$$.assert(Predef.scala:92)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.adapt(GenICode.scala:1038)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.scala$$tools$$nsc$$backend$$icode$$GenICode$$ICodePhase$$$$genLoad(GenICode.scala:1021)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.scala$$tools$$nsc$$backend$$icode$$GenICode$$ICodePhase$$$$genLoad(GenICode.scala:946)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.scala$$tools$$nsc$$backend$$icode$$GenICode$$ICodePhase$$$$genStat(GenICode.scala:169)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase$$$$anonfun$$genStat$$1.apply(GenICode.scala:144)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase$$$$anonfun$$genStat$$1.apply(GenICode.scala:143)
        at scala.List.foreach(List.scala:763)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.genStat(GenICode.scala:143)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.scala$$tools$$nsc$$backend$$icode$$GenICode$$ICodePhase$$$$genLoad(GenICode.scala:940)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.gen(GenICode.scala:112)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase$$$$anonfun$$gen$$1.apply(GenICode.scala:70)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase$$$$anonfun$$gen$$1.apply(GenICode.scala:70)
        at scala.List.foreach(List.scala:763)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.gen(GenICode.scala:70)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.gen(GenICode.scala:134)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.gen(GenICode.scala:88)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase$$$$anonfun$$gen$$1.apply(GenICode.scala:70)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase$$$$anonfun$$gen$$1.apply(GenICode.scala:70)
        at scala.List.foreach(List.scala:763)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.gen(GenICode.scala:70)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.gen(GenICode.scala:80)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.gen(GenICode.scala:66)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.apply(GenICode.scala:62)
        at scala.tools.nsc.Global$$GlobalPhase.applyPhase(Global.scala:247)
        at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$run$$1.apply(Global.scala:233)
        at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$run$$1.apply(Global.scala:233)
        at scala.Iterator$$class.foreach(Iterator.scala:382)
        at scala.collection.mutable.ListBuffer$$$$anon$$1.foreach(ListBuffer.scala:255)
        at scala.tools.nsc.Global$$GlobalPhase.run(Global.scala:233)
        at scala.tools.nsc.backend.icode.GenICode$$ICodePhase.run(GenICode.scala:55)
        at scala.tools.nsc.Global$$Run.compileSources(Global.scala:545)
        at scala.tools.nsc.Interpreter$$Request.compile(Interpreter.scala:729)
        at scala.tools.nsc.Interpreter.interpret(Interpreter.scala:467)
        at scala.tools.nsc.InterpreterLoop.interpretStartingWith(InterpreterLoop.scala:248)
        at scala.tools.nsc.InterpreterLoop.command(InterpreterLoop.scala:236)
        at scala.tools.nsc.InterpreterLoop.repl(InterpreterLoop.scala:148)
        at scala.tools.nsc.InterpreterLoop.main(InterpreterLoop.scala:306)
        at scala.tools.nsc.MainGenericRunner$$.main(MainGenericRunner.scala:147)
        at scala.tools.nsc.MainGenericRunner.main(MainGenericRunner.scala)
```
